--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
-            <nav>
+        </a>
+            <nav id="menu">
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="#">Sign Up</a>
                     </li>
                     <li>
                         <a href="#">Gallery</a>
                     </li>
                     <li>
-                        <a href="#">Sign Up</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                 </ul>
             </nav>
-        </a>
     </header>
     <section>
         Main Image
